# duplexscan

./: .dockerignore  .gitignore  Cargo.toml  LICENCE  README.md  build.Dockerfile  glibc.Dockerfile  makefile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-dependencies.yml  code-quality-check.yml  main.yml  new-pr-to-dev.yaml
scripts/: smoke-test.sh
scripts/prettier/: prettier.Dockerfile
src/: main.rs
