[package]
name = "duplexscan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
unicode-segmentation = "1.12.0"
colored = "2.2.0"
csv = "1.3.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

# This is the main binary
[[bin]]
name = "duplexscan"
path = "src/main.rs"
